# Medicine-Voice-ai

./: .gitignore  CONCEPTS.md  README.md  config.py  langgraph.json  main.py  pipeline.py  pyproject.toml  requirements.txt  test_layer1.py  test_layer2.py  test_layer3.py  test_layer4.py  test_layer5.py
.langgraph_api/: .langgraph_ops.pckl
agent/: graph.py  kiosk.py  nodes.py  state.py  tools.py
audio/: capture.py  stt.py  translator.py  tts.py  vad.py
medicine_assitant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
rag/: ingest.py  inventory.py  retriever.py  setup_inventory.py
rag/data/: chunks.pkl  faiss.index  inventory.db  medicines.csv
